Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,8 @@
    "source": [
     "# Define Driver Class Here\n",
     "class Driver():\n",
-    "    def __init__(self,first=None,las)"
+    "    def __init__(self,first=None,last=None,occupation=None):\n",
+    "        "
    ]
   },
   {
