--- a/index.ipynb
+++ b/index.ipynb
@@ -53,7 +53,7 @@
     "# Define Driver Class Here\n",
     "class Driver():\n",
     "    def __init__(self,first=None,last=None,occupation=None):\n",
-    "        "
+    "        self.first = first"
    ]
   },
   {
