--- a/index.ipynb
+++ b/index.ipynb
@@ -53,7 +53,9 @@
     "# Define Driver Class Here\n",
     "class Driver():\n",
     "    def __init__(self,first=None,last=None,occupation=None):\n",
-    "        self.first = first"
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.o"
    ]
   },
   {
