Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,8 @@
     "    def __init__(self,first=None,last=None,occupation=None):\n",
     "        self.first = first\n",
     "        self.last = last\n",
-    "        self.o"
+    "        self.occupation = occupation\n",
+    "        "
    ]
   },
   {
