Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -105,7 +105,12 @@
    },
    "outputs": [],
    "source": [
-    "# Define Passenger Class Here\n"
+    "# Define Passenger Class Here\n",
+    "class Passenger():\n",
+    "    def __init__(self,first=None,last=None,occupation=None):\n",
+    "        self.first = first\n",
+    "        self.last = last\n",
+    "        self.occupation = occupation"
    ]
   },
   {
