Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,7 +110,8 @@
     "    def __init__(self,first=None,last=None,email=None,rides_taken=0):\n",
     "        self.first = first\n",
     "        self.last = last\n",
-    "        self.occupation = occupation"
+    "        self.occupation = occupation\n",
+    "        self.r"
    ]
   },
   {
