--- a/index.ipynb
+++ b/index.ipynb
@@ -99,10 +99,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Define Passenger Class Here\n",
@@ -111,7 +109,7 @@
     "        self.first = first\n",
     "        self.last = last\n",
     "        self.occupation = occupation\n",
-    "        self.r"
+    "        self.rides_taken = rides_taken"
    ]
   },
   {
@@ -129,7 +127,7 @@
    },
    "outputs": [],
    "source": [
-    "jerry = None # initialize Mr. Seinfeld here\n",
+    "jerry = Passenger # initialize Mr. Seinfeld here\n",
     "print(jerry.first) # \"Jerry\"\n",
     "print(jerry.last) # \"Seinfeld\"\n",
     "print(jerry.email) # \"jerry.seinfeld@mailinator.com\"\n",
