Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -142,7 +142,7 @@
     "print(jerry.first) # \"Jerry\"\n",
     "print(jerry.last) # \"Seinfeld\"\n",
     "print(jerry.email) # \"jerry.seinfeld@mailinator.com\"\n",
-    "print(jerry.rides_taken) # 0"
+    "print(jerry.rides_taken) # 0\n"
    ]
   },
   {
